tests/bad_reserved_name_param.sl
fn good(__sl_bad i32) {}
